Fixed logo on mobile

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -171,6 +171,8 @@ f
 
 .mainLogo {
   margin-bottom: 32px;
+  width: 360px;
+  height: auto;
 }
 
 .heading {
